--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#about">à propos</a>
             <a href="#photos">audiovisuel</a>
             <a href="#projects">projets</a>
-            <a href="#">me contacter</a>
+            <a href="#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
         </nav>
     </header>
@@ -24,7 +24,7 @@
             <a href="#about" onclick="handleMenu()">à propos</a>
             <a href="#photos" onclick="handleMenu()">audiovisuel</a>
             <a href="#projects" onclick="handleMenu()">projets</a>
-            <a href="#" onclick="handleMenu()">me contacter</a>
+            <a href="#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
         </nav>
     </section>
@@ -116,5 +116,16 @@
 
     </section>
 
+    <section id="contact">
+        <ul>
+            <li><a href="#"><span>+</span>Behance<img src="images/call-click-file.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img src="images/call-click-file.svg"></a></li>
+            <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>CV<img src="images/call-click-file.svg"></a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; Tom WAINBERG, 2024</p>
+    </footer>
 </body>
 </html>
