--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/main.css">
     <script src="js/handleMenu.js" defer></script>
     <title>Tom Wainberg - Accueil</title>
 </head>
@@ -52,7 +52,7 @@
         <div>
             <a href="#photos">voir mes photos/vidéos</a>
             <a href="#projects">voir mes projets</a>
-            <a href="#">voir tous mes projets</a>
+            <a href="/pages/projects.html">voir tous mes projets</a>
         </div>
     </section>
 
@@ -97,7 +97,7 @@
             </div>
 
             <div class="background-image" style="background-image: url('/images/photos/img1.svg')">
-                <p>(01) <span>Théories animées</span></p>
+                <a href="/pages/projects/firstMotion.html"><p>(01) <span>Théories animées</span></p></a>
             </div>
 
         </div>
@@ -118,7 +118,7 @@
 
     <section id="contact">
         <ul>
-            <li><a href="#"><span>+</span>Behance<img src="images/call-click-file.svg"></a></li>
+            <li><a href="#"><span>+</span>Youtube<img src="images/call-click-file.svg"></a></li>
             <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img src="images/call-click-file.svg"></a></li>
             <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>CV<img src="images/call-click-file.svg"></a></li>
         </ul>
