--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
-    <script src="js/handleMenu.js" defer></script>
+    <script defer src="js/handleMenu.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script defer src="js/particles.js"></script>
+
 
 </head>
 <body>
@@ -66,6 +69,7 @@
 
 
     <section id="hero">
+        <div class="particles-js" id="particles-js-hero"></div>
         <div>
             <h1>Tom Wainberg</h1>
             <p>
@@ -80,6 +84,7 @@
 
 
     <section id="about">
+        <div class="particles-js" id="particles-js-about"></div>
         <h2>Qui suis-je ?</h2>
         <p>
             Photographe à temps perdu, musicien autodidacte et grimpeur en herbe,
@@ -94,6 +99,7 @@
 
 
     <section id="photos">
+        <div class="particles-js" id="particles-js-photos"></div>
         <h2>Photos</h2>
 
         <div class="container">
@@ -117,6 +123,7 @@
         </div>
     </section>
     <section id="projects">
+        <div class="particles-js" id="particles-js-projects"></div>
         <h2>Projets</h2>
 
         <div class="container">
@@ -144,6 +151,7 @@
 
 
     <section id="contact"> <!-- possibilité de dubliquer un 'li' pour rajouter un lien -->
+        <div class="particles-js" id="particles-js-contact"></div>
         <ul>
             <li><a href="#"><span>+</span>Youtube<img src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
             <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>LinkedIn<img src="images/call-click-file.svg"></a></li> <!-- lien & titre modifiable -->
