changement test totototo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head prefix="og: http://ogp.me/ns#">
 
-    <title>Accueil - Toto Wainberg</title>
+    <title>Accueil - Totototo Wainberg</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
