changement index, motion design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head prefix="og: http://ogp.me/ns#">
 
-    <title>Accueil - Totototo Wainberg</title>
+    <title>Accueil - Tom Wainberg</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -73,10 +73,10 @@
         <div>
             <h1>Tom Wainberg</h1>
             <p>
-                Étudiant de première année en BUT Métiers du Multimédia et de l'internet à Bordeaux
+                Étudiant de première année en BUT Métiers du Multimédia et de l'Internet à l'IUT Bordeaux Montaigne.
             </p>
         </div>
-        <img src="images/portrait.svg" alt="portrait">
+        <img src="images/portrait.webp" alt="portrait">
     </section>
     <a href="#about" class="scrollCall">
         <img src="images/arrow-scroll-call.svg" alt="flèche de l'appel à défilement">
@@ -107,7 +107,7 @@
                 <p>(02) <span>Nom du projets</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/photos/img1.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
             </a>
         </div>
@@ -127,11 +127,11 @@
         <h2>Projets</h2>
 
         <div class="container">
-            <a href="#"class="card background-image" style="background-image: url('/images/photos/img2.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Nom du projets</span></p> <!-- Titre du projet -->
+            <a href="#"class="card background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/photos/img1.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
             </a>
         </div>
