--- a/pages/projects/firstMotion.html
+++ b/pages/projects/firstMotion.html
@@ -32,15 +32,19 @@
     <section id="project-page-title">
         <h1><span>(01) </span>Théorie animée</h1>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quo ad id obcaecati, quidem impedit eius accusantium, et quos quam quod porro, repellat asperiores nulla! Laudantium officiis odio dignissimos illum.
-            Reiciendis eligendi soluta provident consectetur rerum enim eveniet. Sit, molestias pariatur libero, voluptate inventore recusandae veniam obcaecati ipsum laborum deserunt corporis et, vero impedit nobis molestiae ullam voluptates sed praesentium!
+            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avons vulgarisé la théorie du Public Actif de Gabriel Tarde, illustrée dans un style de flat design mis en perspective. L'objectif était de rendre nos explications non seulement esthétiques, mais surtout ludiques.
+            
+        </p>
+       
+        <p>
+            Tout cela a été réalisé dans un délai de 4 jours, dans le cadre de la formation MMI (novembre 2023).
         </p>
     </section>
 
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/photos/img4.svg);"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);;background-size: cover;"></div>
             <div class="text">
                 <p class="title">Packshot Chocolatines</p>
                 <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
@@ -48,7 +52,7 @@
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/photos/img4.svg);"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: cover;"></div>
             <div class="text">
                 <p class="title">Packshot Chocolatines</p>
                 <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
@@ -56,7 +60,7 @@
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/photos/img4.svg);"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: cover;"></div>
             <div class="text">
                 <p class="title">Packshot Chocolatines</p>
                 <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
