quelques changements mineurs

--- a/pages/projects/firstMotion.html
+++ b/pages/projects/firstMotion.html
@@ -44,7 +44,7 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);;background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: cover;"></div>
             <div class="text">
                 <p class="title">Packshot Chocolatines</p>
                 <p class="text">Photographie de pains au chocolat dans un cadre professionnel.</p>
