maj des miniatures des projets

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h2>Projets</h2>
 
         <div class="container">
-            <a href="#"class="card background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+            <a href="/pages/projects/escapadesTemporelles.html"class="card background-image" style="background-image: url('/images/miniatures/miniature-escapades-temporelles.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
                 <p>(02) <span>Escapades Temporelles</span></p> <!-- Titre du projet -->
             </a>
 
@@ -137,12 +137,12 @@
         </div>
 
         <div class="container">
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img3.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(03) <span>Nom du projets</span></p> <!-- Titre du projet -->
+            <a href="#" class="card background-image" style="background-image: url('/images/miniatures/miniature-befake.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(03) <span>BeFake.</span></p> <!-- Titre du projet -->
             </a>
 
-            <a href="#" class="card background-image" style="background-image: url('/images/photos/img4.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(04) <span>Nom du projets</span></p> <!-- Titre du projet -->
+            <a href="#" class="card background-image" style="background-image: url('/images/miniatures/miniature-refonte-musba.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
+                <p>(04) <span>Refonte MusBa</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
