Changements titres photos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="author" content="Tom Wainberg">
     <meta name="owner" content="Tom Wainberg">
 
-    <meta name="url" content="https://tom-wainberg.netlify.app/">
-    <meta name="identifier-URL" content="https://tom-wainberg.netlify.app/">
-    <link rel="canonical" href="https://tom-wainberg.netlify.app/" />
+    <meta name="url" content="https://tomwainberg.netlify.app/">
+    <meta name="identifier-URL" content="https://tomwainberg.netlify.app/">
+    <link rel="canonical" href="https://tomwainberg.netlify.app/" />
 
     <meta name="subject" content="undefined">
     <meta name="description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
@@ -25,11 +25,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
     <meta property="og:site_name" content="Tom Wainberg" />
-    <meta property="og:url" content="https://tom-wainberg.netlify.app/" />
+    <meta property="og:url" content="https://tomwainberg.netlify.app/" />
     <meta property="og:locale" content="fr" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://tom-wainberg.netlify.app/">
+    <meta property="twitter:url" content="https://tomwainberg.netlify.app/">
     <meta name="twitter:title" content="Accueil - Tom Wainberg" />
     <meta name="twitter:description" content="Portfolio Tom Wainberg. Étudiant au BUT MMI Bordeaux Montaigne. Découvrez mes projets, mes photos et mes vidéos. Vous trouverez mon LinkedIn, mon CV, mes réseaux..." />
 
@@ -104,21 +104,21 @@
 
         <div class="container">
             <a href="#"class="card background-image" style="background-image: url('/images/photos/img2.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Nom du projets</span></p> <!-- Titre du projet -->
+                <p>(02) <span>Paris</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="/pages/projects/firstMotion.html" class="card background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(01) <span>Théories animées</span></p> <!-- Titre du projet -->
+                <p>(01) <span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
         <div class="container">
             <a href="#" class="card background-image" style="background-image: url('/images/photos/img3.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(03) <span>Nom du projets</span></p> <!-- Titre du projet -->
+                <p>(03) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="#" class="card background-image" style="background-image: url('/images/photos/img4.svg')"> <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(04) <span>Nom du projets</span></p> <!-- Titre du projet -->
+                <p>(04) <span>Montagne</span></p> <!-- Titre du projet -->
             </a>
         </div>
     </section>
